--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,11 @@ p {
 body {
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
+}
+
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
 }
