--- a/src/styles/Styles.module.scss
+++ b/src/styles/Styles.module.scss
@@ -3,18 +3,18 @@
 @import 'tailwindcss/utilities';
 
 .header1 {
-  @apply  text-2xl font-black text-gray;
+  @apply  text-2xl font-black text-gray sm:text-3xl md:text-3xl lg:text-3xl xl:text-4xl;
 }
 .header2 {
-  @apply text-xl font-bold text-mint;
+  @apply text-xl font-bold text-mint sm:text-2xl md:text-2xl lg:text-2xl xl:text-2xl;
 }
 .subtitle {
-  @apply text-base font-bold text-gray;
+  @apply text-base font-bold text-gray sm:text-lg md:text-lg lg:text-xl xl:text-xl;
 }
 .body1 {
-  @apply  text-base text-gray;
+  @apply text-base text-gray sm:text-lg md:text-lg lg:text-xl xl:text-xl;
 }
 .body2 {
-  @apply  text-sm text-gray;
+  @apply  text-sm text-gray sm:text-base md:text-base lg:text-lg xl:text-lg;
 }
 
