update header on admin pages and fix minor bugs

--- a/src/layouts/admin/header/Header.module.scss
+++ b/src/layouts/admin/header/Header.module.scss
@@ -1,3 +1,17 @@
 .header {
+  .image {
+    fill: black;
+  }
 
+  .navContainer {
+    div {
+      display: flex;
+      span {
+        margin-left: 20px;
+      }
+      span, svg {
+        cursor: pointer;
+      }
+    }
+  }
 }
