--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,8 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: theme('colors.custom-turquoise');
+  background: theme('colors.lightGray');
+  border-radius: 8px;
 }
 
 /* Handle */
