events, press components added, refactored styles

--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,7 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: theme('colors.gray');
 }
+
+.container {
+  @apply m-auto w-full lg:max-w-[70vw];
+}
