--- a/src/styles/Styles.module.scss
+++ b/src/styles/Styles.module.scss
@@ -3,7 +3,7 @@
 @import 'tailwindcss/utilities';
 
 .header1 {
-  @apply  text-2xl font-black text-gray sm:text-3xl md:text-3xl lg:text-3xl xl:text-4xl;
+  @apply  text-2xl font-black text-gray uppercase sm:text-3xl md:text-3xl lg:text-3xl xl:text-4xl;
 }
 .header2 {
   @apply text-xl font-bold text-mint sm:text-2xl md:text-2xl lg:text-2xl xl:text-2xl;
