--- a/src/styles/Styles.module.scss
+++ b/src/styles/Styles.module.scss
@@ -20,3 +20,6 @@
 .container {
   @apply m-auto w-full py-4 max-w-[88vw] md:max-w-[80vw] lg:max-w-[70vw] lg:py-8;
 }
+.wrapper {
+  @apply m-auto w-full max-w-[90vw];
+}
