--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,12 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: theme('colors.gray');
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
