--- a/src/styles/Styles.module.scss
+++ b/src/styles/Styles.module.scss
@@ -21,5 +21,11 @@
   @apply m-auto w-full py-4 max-w-[88vw] md:max-w-[80vw] lg:max-w-[76vw] xl:max-w-[70vw] lg:py-8;
 }
 .wrapper {
-  @apply m-auto w-full max-w-[90vw];
+  @apply m-auto w-full max-w-[88vw] md:max-w-[80vw] lg:max-w-[76vw] xl:max-w-[70vw];
+}
+.box {
+  @apply m-auto w-full;
+}
+.pageident {
+  @apply md:px-12 md:py-8 px-6 py-6
 }
